--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="https://www.instagram.com/_huzaifa_haider_/" id="insta" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/huzaifa-haider-87a4912ab/" id="linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://api.whatsapp.com/send?phone=923430473955" id="whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://github.com/HHhuzaifa" id="git" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/huzaifa-haider" id="git" target="_blank"><i class="fab fa-github"></i></a>
             </div>
             <div class="info">
                 <h2>I am <span>Huzaifa Haider</span></h2>
@@ -218,7 +218,7 @@
                 <li><a href="https://www.facebook.com/huzaifa.fb.1" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="https://www.instagram.com/_huzaifa_haider_/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/huzaifa-haider-87a4912ab/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="https://github.com/HHhuzaifa" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://github.com/huzaifa-haider" target="_blank"><i class="fab fa-github"></i></a></li>
             </ul>
             </div>
         </div>
