--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         </li>
                         <li>
                             <h3 class="item-title"><i class="fas fa-envelope"></i>Email Address</h3>
-                            <span><a href="huzaifahaider4989@gmail.com">huzaifahaider4989@gmail.com</a></span>
+                            <span><a href="mailto:huzaifahaider4989@gmail.com">huzaifahaider4989@gmail.com</a></span>
                         </li>
                         <li>
                             <h3 class="item-title"><i class="fas fa-map-marker-alt"></i>Address</h3>
