--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
                 <ul class="service-list">
                     <li class="service-container">
                         <div class="service-card">
-                            <i class="fa-solid fa-desktop"></i>
-                            <h3>Web <br> Design</h3>
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <h3>Mobile App <br> Development</h3>
                         </div>
                     </li>
                     <li class="service-container">
                         <div class="service-card">
                             <i class="fa-solid fa-desktop"></i>
-                            <h3>Front-End Development</h3>
+                            <h3>Mern-stack Development</h3>
                         </div>
                     </li>
                     <li class="service-container">
