--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="info">
                 <h2>I am <span>Huzaifa Haider</span></h2>
-                <h3>Web Developer</h3>
+                <h3>Web Developer, Android Developer</h3>
                 <a href="#contact" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
             </div>
             <div class="home-img">
