--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2 class="section-title" id="about-title">About Me</h2>
             <div class="con">
                 <div class="text-container">
-                    <h3>I'm a lead <span>Web Developer</span> based in <span>Pakistan</span> willing to be a computer scientist in future. I create stunnig, eye-catching and user-friendly websites. I am highly experienced in web design and development.</h3>
+                    <h3>I'm a lead <span>Web Developer and Android App Developer</span> based in <span>Pakistan</span> willing to be a computer scientist in future. I create stunnig, eye-catching and user-friendly websites. I am highly experienced in web design and development.</h3>
                 </div>
             </div>
         </div>
