--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Huzaifa Haider is a web developer and android app developer based in Pakistan. He creates stunning, eye-catching and user-friendly websites. He is highly experienced in web design and development.">
+    <meta name="keywords" content="web developer, android app developer, web design, web development, web developer in pakistan, android app developer in pakistan, web developer in islamabad, android app developer in islamabad, web developer in rawalpindi, android app developer in rawalpindi">
+    <meta name="author" content="Huzaifa Haider">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <meta name="yandex" content="index, follow">
+    <meta name="msnbot" content="index, follow">
+    <meta name="alexabot" content="index, follow">
+    <meta name="slurp" content="index, follow">
+    <meta name="teoma" content="index, follow">
+    <meta name="baiduspider" content="index, follow">
+    <meta name="yahoobot" content="index, follow">
+    <meta name="scooter" content="index, follow">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@huzaifa_haider_">
+    <meta name="twitter:creator" content="@huzaifa_haider_">
+    <meta name="twitter:title" content="Huzaifa Haider">
     <title>Huzaifa Haider</title>
     <link rel="icon" href="./images/logo.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
