kotlin lang update

--- a/index.html
+++ b/index.html
@@ -138,10 +138,12 @@
                     </li>
                     <li class="skills-container">
                         <div class="skills-card">
-                            <i class="fa-brands fa-node-js"></i>
-                            <h3>NodeJs</h3>
+                            <!-- <i class="fa-brands fa-node-js"></i> -->
+                            <img src="./images/icons8-kotlin.svg" alt="Kotlin">
+                            <h3>Kotlin</h3>
                         </div>
                     </li>
+
                     <li class="skills-container">
                         <div class="skills-card">
                             <i class="fa-brands fa-bootstrap"></i>
@@ -248,3 +250,8 @@
     </footer>
     </body>
 </html>
+
+
+
+
+
